@@ -24,6 +24,7 @@ OPTIMIZEMODE  = -O
 #### File system operations: ####
 LN            = ln -sf
 RM            = rm -f
+RMDIR         = rm -rf
 MV            = mv
 
 #### Linker definitions: ####
