@@ -36,13 +36,31 @@ while test $# -gt 0; do
       ### output the executable directory
       out="$out $bindir"
       ;;
+    --nativebindir)
+      ### output the native execuatable directory
+      if [ "$arch" = "Win32" ] ; then
+        winbindir=`cygpath -m $bindir`
+        out="$out $winbindir"
+      else
+        out="$out $bindir"
+      fi
+      ;;
     --libdir)
       ### output the library directory
       out="$out $libdir"
       ;;
     --incdir)
-      ### output the header directory
+      ### output the headers directory
       out="$out $incdir"
+      ;;
+    --nativeincdir)
+      ### output the native headers directory
+      if [ "$arch" = "Win32" ] ; then
+        winincdir=`cygpath -m $incdir`
+        out="$out $winincdir"
+      else
+        out="$out $incdir"
+      fi
       ;;
     --help)
       ### Print a help message
@@ -51,8 +69,10 @@ while test $# -gt 0; do
       echo "  --arch                Print the architecture (OS)"
       echo "  --go4sys              Print the main Go4 directory"
       echo "  --bindir              Print the executable directory"
+      echo "  --nativebindir        Print the executable directory for cygwin"
       echo "  --libdir              Print the library directory"
-      echo "  --incdir              Print the header directory"
+      echo "  --incdir              Print the headers directory"
+      echo "  --nativeincdir        Print the headers directory for cygwin"
       echo "  --version             Print the Go4 version"
       echo "  --help                Print this message"
       exit 0
