@@ -3,16 +3,13 @@ LANGUAGE	= C++
 
 CONFIG += qt warn_off thread plugin
 
-win32: DESTDIR  = .
+win32: TARGET = libGo4UserGui
 
-win32: TARGET   = libGo4UserGui
+win32: LIBS += $(GO4BINDIR)/go4.lib libCore.lib
 
-win32: LIBS += ..\..\bin\go4.lib libCore.lib
+INCLUDEPATH += $(GO4INCDIR)
 
-
-INCLUDEPATH += $(GO4SYS)/include
-
-DEPENDPATH += $(GO4SYS)/include
+DEPENDPATH += $(GO4INCDIR)
 
 SOURCES += QUserPanel.cpp
 
