@@ -8,16 +8,17 @@ include $(GO4SYS)/Makefile.config
 
 ifdef GO4PACKAGE
 USERGUI4_DIR         = qt4/Go4UserGUI
-USERGUI4_QFLAGS      = "GO4SYS=../.."
+USERGUI4_QFLAGS      = GO4INCDIR=../.. GO4BINDIR=../../bin
 else
 USERGUI4_DIR         = $(CURDIR)
+USERGUI4_QFLAGS      = GO4INCDIR=$(shell go4-config --nativeincdir) GO4BINDIR=$(shell go4-config --nativebindir)
 endif
 
 USERGUI4_LIBDIR      = $(USERGUI4_DIR)
 USERGUI4_QTLIBNAME   = libGo4UserGui
 USERGUI4_QTPRO       = Go4UserGui.pro
 USERGUI4_QTMAKE      = Makefile.qt
-USERGUI4_QGO4WIDG    = $(GO4SYS)/include/QGo4Widget.h
+USERGUI4_QGO4WIDG    = $(GO4INCPATH)/QGo4Widget.h
 
 USERGUI4_NOTLIBF     =
 
@@ -59,6 +60,9 @@ $(USERGUI4_DIR)/$(USERGUI4_QTMAKE): $(USERGUI4_DIR)/$(USERGUI4_QTPRO) $(USERGUI4
 $(USERGUI4_QTLIB): $(USERGUI4_DIR)/$(USERGUI4_QTMAKE) $(USERGUI4_QGO4WIDG)
 	@echo "Generating Qt part of the User GUI..."
 	+cd $(USERGUI4_DIR); $(MAKEFORQT) -f $(USERGUI4_QTMAKE) $(USERGUI4_QFLAGS)
+ifeq ($(GO4_OS),Win32)
+	$(MV) $(USERGUI4_DIR)/release/$(USERGUI4_QTLIBNAME).* $(USERGUI4_DIR)
+endif
 
 all-qt4usergui:  $(USERGUI4_QTLIB)
 
@@ -66,11 +70,15 @@ clean-qt4usergui-bin:
 ifneq ($(wildcard $(USERGUI4_DIR)/$(USERGUI4_QTMAKE)),)
 	cd $(USERGUI4_DIR); $(MAKEFORQT) -f $(USERGUI4_QTMAKE) clean $(USERGUI4_QFLAGS)
 endif
-	@rm -f $(USERGUI4_DIR)/$(USERGUI4_QTMAKE)
+	@rm -f $(USERGUI4_DIR)/$(USERGUI4_QTMAKE)*
 	@rm -f $(USERGUI4_DIR)/*.o $(USERGUI4_DIR)/moc_*.* $(USERGUI4_DIR)/ui_*.h
+ifeq ($(GO4_OS),Win32)
+	$(RM) $(USERGUI4_LIBDIR)/$(USERGUI4_QTLIBNAME).exp $(USERGUI4_LIBDIR)/$(USERGUI4_QTLIBNAME).lib
+	$(RMDIR) $(USERGUI4_DIR)/release $(USERGUI4_DIR)/debug 
+endif
 
 clean-qt4usergui: clean-qt4usergui-bin
-	@rm -f $(USERGUI4_LIBDIR)/$(USERGUI4_QTLIBNAME).$(DllSuf)*
+	$(RM) $(USERGUI4_LIBDIR)/$(USERGUI4_QTLIBNAME).*
 
 clean-qt4:: clean-qt4usergui
 
